--- a/home.html
+++ b/home.html
@@ -11,8 +11,8 @@
     <header class="landing-page1">
 
         <div class="cabecalho">
-            <img src="./img/logo.png" width="400" height="400" alt="LOGO">
-            <h1 class="">
+            <img src="./img/logo.png" alt="LOGO">
+            <h1>
                 Sem tempo de <br> fazer compras?<br>
                 <br>Deixa com a gente! <br>
                 <br>Nós compramos & <br>
@@ -22,21 +22,12 @@
         </div>
 
         <nav class="opcoes">
-            <div class="aperitivo">
-                <p><b>Aperitivos</b></p>
-            </div>
-
-            <div class="japones">
-                <p><b>Comida japonesa</b></p>
-            </div>
-
-            <div class="vegetariano">
-                <p><b>Vegetariano</b></p>
-            </div>
-
-            <div class="massas">
-                <p><b>Massas</b></p>
-            </div>
+            <ul class="menu">
+                <li><a href="vegetariano.html">Vegetariano</a></li>
+                <li><a href="japones.html">Comida japonesa</a></li>
+                <li><a href="massas.html">Massas</a></li>
+                <li><a href="aperitivos.html">Aperitivos</a></li>
+            </ul>   
         </nav> 
     </header>    
      
